2010-01-22 [pawel]	3.7.4cvs7

	* autogen.sh
		--disable-aspell -> --disable-enchant
	* configure.ac
		Fix options spacing in configure --help
	* src/wizard.c
		Make wizard's window centered on the screen

2010-01-19 [holger]	3.7.4cvs6

	* src/folder.c
	* src/folder.h
		Introduce folder_get_item_from_identifier().
		In contrast to folder_find_item_from_identifier(), this
		function recursively creates the FolderItems in the id path.
		Useful for programmatically creating folders (e.g. by plugins)

2010-01-17 [pawel]	3.7.4cvs5

	* src/gtk/authors.h
		Fix my lastname

2010-01-16 [colin]	3.7.4cvs4

	* src/plugins/pgpcore/sgpgme.c
		Probably fix bug 2098, 'claws-mails crashes frequently 
		with pgpcore'. Fix double-free.

2010-01-16 [holger]	3.7.4cvs3

	* src/prefs_toolbar.h
		Forgotten header

2010-01-15 [colin]	3.7.4cvs2

	* src/privacy.c
		Decode mimeinfo before decrypting it. Probably
		fixes bug 2059 'gpgme >=1.1.8 not compatible 
		with S/MIME encryption' and bug 2076 'having 
		worked 2 times properly CLAWS ceased to 
		decrypt incoming PGP mails -displays base64 
		instead - sucks completely'
		Let's hope complete suckage ends here!
		Thanks to Matthias Drochner.

2010-01-08 [paul]	3.7.4cvs1

	* tools/claws.i18n.status.pl
		fix typos

2010-01-08 [paul]	3.7.4

	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.4 released!

2010-01-08 [paul]	3.7.3cvs57

	* po/ca.po
	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/nl.po
	* po/pt_BR.po
	* po/pt_PT.po
	* po/ru.po
	* po/sk.po
		updated translations by Miquel Oliete, David Vachulka, Stephan Sachse,
		Tommi Pirinen, Pader Rezso, MSulchan Darmawan, kazken3, Marcel Pol,
		Frederico Goncalves Guimaraes, Tiago Faria, Aleksei Miheev, and
		Slavko

2010-01-08 [paul]	3.7.3cvs56

	* src/common/utils.c
		fix bug 2089, 'URLs ending with an underscore ('_')
		are not correctly parsed'. thanks to Johan

2010-01-05 [colin]	3.7.3cvs55

	* po/fr.po
		Update french translation

2010-01-04 [mones]	3.7.3cvs54
