@@ -381,6 +381,10 @@ GtkWidget *colorlabel_create_color_menu(void)
 	g_object_set_data(G_OBJECT(item), "color", GUINT_TO_POINTER(0));
 	gtk_widget_show(item);
 
+	item = gtk_separator_menu_item_new();
+	gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
+	gtk_widget_show(item);
+
 	/* and the color items */
 	for (i = 0; i < LABEL_COLORS_ELEMS; i++) {
 		GtkWidget *hbox; 
